--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
+    "vite-plugin-vuetify": "^2.0.3",
     "vue-loader": "^17.4.2",
     "vue-template-compiler": "^2.7.16",
+    "vuetify": "^3.5.9",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-notifier": "^1.15.0"
