--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "^5.0.4",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0",
