Beta 0.7.4 agregando endpoint inicio

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -17,3 +17,5 @@ api_platform:
             rfc_7807_compliant_errors: true
     event_listeners_backward_compatibility_layer: false
     keep_legacy_inflector: false
+    resource_class_directories:
+        - '%kernel.project_dir%/src/ApiResource'
