--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -5,7 +5,8 @@ doctrine:
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '16'
-
+        types:
+            custom_uuid: App\Doctrine\CustomUuidType
         profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
     orm:
