--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@tinymce/tinymce-vue": "^5.1.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
