--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,6 +7,7 @@ controllers:
        csrf:
            create: true
            require:
+               - 'GET'
                - 'POST'
                - 'PUT'
                - 'PATCH'
