--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "dependencies": {
     "@tinymce/tinymce-vue": "^6.0.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "unplugin-vue-components": "^0.26.0",
