Beta 0.23.0 Se cambia vue-template-compiler por  @vue/compiler-sfc y vue-loader@next

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@hotwired/stimulus": "^3.0.0",
     "@mdi/font": "^7.4.47",
     "@symfony/webpack-encore": "^4.6.1",
+    "@vue/compiler-sfc": "^3.4.35",
     "chartjs-plugin-zoom": "^2.0.1",
     "core-js": "^3.23.0",
     "deepmerge": "^4.3.1",
@@ -17,8 +18,7 @@
     "sass": "^1.71.1",
     "sass-loader": "^14.1.1",
     "vite-plugin-vuetify": "^2.0.3",
-    "vue-loader": "^17.4.2",
-    "vue-template-compiler": "^2.7.16",
+    "vue-loader": "^17.3.1",
     "vuetify": "^3.6.8",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
