--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,7 +35,7 @@ security:
         - { path: ^/login$, roles: PUBLIC_ACCESS }
         - { path: ^/login_check$, roles: PUBLIC_ACCESS }
         - { path: ^/api/me, roles: ROLE_USER }
-        - { path: ^/admin$, roles: ROLE_USER }
+        - { path: ^/admin(/|$), roles: ROLE_USER }
         - { path: ^/(personalidad|inicios)(/|$), roles: ROLE_USER }
 
 when@test:
