--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "license": "UNLICENSED",
   "private": true,
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build"
@@ -39,7 +42,7 @@
     "bootstrap": "^5.3.3",
     "micromatch": "^4.0.7",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.4",
+    "vite": ">=5.4.20",
     "vite-plugin-symfony": "^6.5.3",
     "vue": "^3.4.21"
   }
