--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "micromatch": "^4.0.7",
+    "tinymce": "^6.0.0",
     "unplugin-vue-components": "^0.26.0",
-    "vite": ">=5.4.20",
+    "vite": "^5.4.20",
     "vite-plugin-symfony": "^6.5.3",
     "vue": "^3.4.21"
   }
