--- a/package.json
+++ b/package.json
@@ -5,26 +5,18 @@
     "@fontsource/roboto-condensed": "^5.0.15",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@hotwired/stimulus": "^3.0.0",
-    "@symfony/webpack-encore": "^5.1.0",
     "@vue/compiler-sfc": "^3.4.35",
     "chartjs-plugin-zoom": "^2.0.1",
     "core-js": "^3.23.0",
     "deepmerge": "^4.3.1",
-    "fibers": "^5.0.3",
     "glob-all": "^3.3.1",
-    "node-sass": "^9.0.0",
     "regenerator-runtime": "^0.13.9",
-    "sass": "^1.71.1",
-    "sass-loader": "^16.0.5",
-    "vue-loader": "^17.3.1",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-notifier": "^1.15.0"
+    "sass": "^1.71.1"
   },
   "license": "UNLICENSED",
   "private": true,
   "engines": {
-    "node": ">=18"
+    "node": ">=20 <23"
   },
   "packageManager": "npm@10",
   "scripts": {
